# nft-study

./: Anchor.toml  package-lock.json  package.json  readme.md
programs/nft-study/: Cargo.toml
programs/nft-study/src/: lib.rs
tests/: nft-study.ts
