[package]
name = "nft-study"
version = "0.1.0"
description = "nft study"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_study"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.29.0", features = ["init-if-needed"]}
ahash = "0.8.6"
anchor-spl = {version = "0.29.0",features = ["metadata"]}
mpl-token-metadata="3.2.0"
